added back to home

--- a/templates/result.html
+++ b/templates/result.html
@@ -41,6 +41,7 @@
         <!-- {% else %} -->
             <p>The machine is predicted to be functioning properly.</p>
         <!-- {% endif %} -->
+        <a href="/"><button>Back to Home</button></a>
     </div>
 </body>
 </html>
