--- a/templates/result.html
+++ b/templates/result.html
@@ -41,7 +41,7 @@
         <!-- {% else %} -->
             <p>The machine is predicted to be functioning properly.</p>
         <!-- {% endif %} -->
-        <a href="/"><button>Back to Home</button></a>
+        <a href="{{ url_for('main') }}"><button>Back to Home</button></a>
     </div>
 </body>
 </html>
