--- a/templates/login.html
+++ b/templates/login.html
@@ -62,6 +62,9 @@
 <body>
     <div class="container">
         <h1>Login</h1>
+        {% if error %}
+        <p style="color: red;">{{ error }}</p>
+        {% endif %}
         <form action="{{ url_for('login') }}" method="post">
             <div class="form-group">
                 <label for="username">Username:</label>
@@ -73,6 +76,8 @@
             </div>
             <input type="submit" value="Login">
         </form>
+        <p>Forgot your password? <a href="{{ url_for('change_password') }}">Reset Password</a></p>
+        <p>Don't have an account? <a href="{{ url_for('signup') }}">Signup</a></p>
     </div>
 </body>
 </html>
