--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,3 @@
-<!-- login.html -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,57 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    <style>
-        body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        background-image: url("/static/mechanical-engineering-2993233.jpg"); /* Add your background image path here */
-        background-size: auto;
-        background-position: center;
-        height: 100vh;
-    }
-    h1 {
-    margin-bottom: 20px;
-    color: rgb(131, 129, 144);
-    }
-    form {
-            display: vertical;
-            flex-wrap: wrap;
-            justify-content: space-between;
-        }
-        .form-group {
-            flex-basis: calc(50% - 20px);
-            margin-bottom: 15px;
-        }
-        label {
-            display: block;
-            margin-bottom: 5px;
-            font-weight: bold;
-            color: white;
-        }
-        input[type="number"],
-        select {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        input[type="submit"] {
-            width: 100%;
-            padding: 10px;
-            background-color: #071c32;
-            border: none;
-            color: #fff;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            box-sizing: inherit;
-            width: 190px;
-        }
-        input[type="submit"]:hover {
-            background-color: #0056b3;
-        }
-    </style>
 </head>
 <body>
     <div class="container">
@@ -76,8 +23,8 @@
             </div>
             <input type="submit" value="Login">
         </form>
-        <p>Forgot your password? <a href="{{ url_for('change_password') }}">Reset Password</a></p>
-        <p>Don't have an account? <a href="{{ url_for('signup') }}">Signup</a></p>
+        <p style="color: black;">Forgot your password? <a style="color: blue;" href ="{{ url_for('change_password') }}">Reset Password</a></p>
+        <p style="color: black;">Don't have an account? <a style="color: blue" href="{{ url_for('signup') }}">Signup</a></p>
     </div>
 </body>
 </html>
