--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,64 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    <style>
-        body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        background-image: url("/static/mechanical-engineering-2993233.jpg"); /* Add your background image path here */
-        background-size: auto;
-        background-position: center;
-        height: 100vh;
-    }
-    h1 {
-    margin-bottom: 20px;
-    color: rgb(131, 129, 144);
-    }
-    form {
-            display: vertical;
-            flex-wrap: wrap;
-            justify-content: space-between;
-        }
-        .form-group {
-            flex-basis: calc(50% - 20px);
-            margin-bottom: 15px;
-        }
-        label {
-            display: block;
-            margin-bottom: 5px;
-            font-weight: bold;
-            color: white;
-        }
-        input[type="number"],
-        select {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        input[type="submit"] {
-            width: 100%;
-            padding: 10px;
-            background-color: #071c32;
-            border: none;
-            color: #fff;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            box-sizing: inherit;
-            width: 190px;
-        }
-        input[type="submit"]:hover {
-            background-color: #0056b3;
-        }
-    </style>
 </head>
 <body>
     <div class="container">
         <h1>Signup</h1>
         <form action="{{ url_for('signup') }}" method="post" onsubmit="return validateSignup()">
             <div class="form-group">
-                <label for="username">Username (at least 5 characters):</label>
+                <label for="username">Username:</label>
                 <input type="text" id="username" name="username" pattern=".{5,}" title="Username must be at least 5 characters long" required>
             </div>
             <div class="form-group">
@@ -72,7 +21,7 @@
                 <input type="email" id="email" name="email" required>
             </div>
             <div class="form-group">
-                <label for="password">Password (at least 8 characters, one uppercase letter, one lowercase letter, and one number):</label>
+                <label for="password">Password:</label>
                 <input type="password" id="password" name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Password must be at least 8 characters long and include at least one uppercase letter, one lowercase letter, and one number" required>
             </div>
             <div class="form-group">
